--- a/package.json
+++ b/package.json
@@ -22,9 +22,8 @@
     "GitHub Actions",
     "Escola TAT"
   ],
-  "author": "Walmyr <wlsf82@gmail.com> (https://walmyr.dev/)",
-  "license": "MIT",
-  "homepage": "https://github.com/wlsf82/cypress-do-zero-a-nuvem#readme",
+  "author": "Stephanie Godoi",
+  "homepage": "https://github.com/stephaniegodoigit/cypress-do-zero-a-nuvem",
   "devDependencies": {
     "cypress": "^13.12.0"
   }
